--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -28,17 +28,14 @@
     h4 {
         font-size: 16px;
     }
-}
 
-@media screen and (max-width: 480px) {
+    @include v.celu {
 
-    .pie-de-pagina {
         font-size: 5%;
         padding: 5px 1px 1px 1px;
 
         h2 {
             font-size: 0.5rem;
-
         }
 
         h3 {
@@ -50,3 +47,24 @@
         }
     }
 }
+
+// @media screen and (max-width: 480px) {
+
+//     .pie-de-pagina {
+//         font-size: 5%;
+//         padding: 5px 1px 1px 1px;
+
+//         h2 {
+//             font-size: 0.5rem;
+
+//         }
+
+//         h3 {
+//             font-size: 0.5rem;
+//         }
+
+//         h4 {
+//             font-size: 10px;
+//         }
+//     }
+// }
