--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -64,3 +64,9 @@ $borde-color-pri: #f5f5f5;
         @content;
     }
 }
+
+@mixin tab{
+    @media(min-width: 431px) and (max-width: 968px){
+        @content
+    }
+}
