--- a/style/style.css
+++ b/style/style.css
@@ -319,6 +319,20 @@ main .features-contenedor .osciladores-imagen {
   background: #FFA500;
   background: linear-gradient(0deg, rgb(255, 165, 0) 0%, rgb(255, 165, 0) 91%, rgb(236, 236, 236) 99%);
 }
+.pie-de-pagina .redes {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  gap: 20px;
+  justify-content: center;
+  align-content: space-between;
+}
+.pie-de-pagina .redes img {
+  width: 3vw;
+}
+.pie-de-pagina a {
+  text-decoration: none;
+}
 .pie-de-pagina h2 {
   color: #8B4500;
   font-size: 1.2rem;
@@ -329,6 +343,7 @@ main .features-contenedor .osciladores-imagen {
 }
 .pie-de-pagina h4 {
   font-size: 16px;
+  color: #8B4500;
 }
 @media (min-width: 320px) and (max-width: 430px) {
   .pie-de-pagina {
@@ -336,13 +351,24 @@ main .features-contenedor .osciladores-imagen {
     padding: 5px 1px 1px 1px;
   }
   .pie-de-pagina h2 {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
   }
   .pie-de-pagina h3 {
     font-size: 0.5rem;
   }
   .pie-de-pagina h4 {
-    font-size: 10px;
+    font-size: 12px;
+  }
+  .pie-de-pagina .redes img {
+    width: 6vw;
+  }
+}
+@media (min-width: 431px) and (max-width: 968px) {
+  .pie-de-pagina .redes img {
+    width: 5vw;
+  }
+  .pie-de-pagina h3 {
+    font-size: 15px;
   }
 }
 
@@ -352,6 +378,11 @@ header .header__logo {
 @media (min-width: 320px) and (max-width: 430px) {
   header .header__logo {
     width: 100px;
+  }
+}
+@media (min-width: 431px) and (max-width: 968px) {
+  header .header__logo {
+    width: 150px;
   }
 }
 
@@ -437,7 +468,7 @@ main .nuevos-sintes .sinte-item p {
 
 .suscripcion {
   position: fixed;
-  bottom: 5px;
+  bottom: 15px;
   right: 10px;
   width: 50px;
   animation: balanceo 2s infinite ease;
@@ -461,6 +492,13 @@ main .nuevos-sintes .sinte-item p {
   }
   .suscripcion {
     width: 10%;
+    bottom: 50px;
+  }
+}
+@media (min-width: 431px) and (max-width: 968px) {
+  .suscripcion {
+    width: 6%;
+    bottom: 70px;
   }
 }
 @keyframes balanceo {
