--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -107,8 +107,9 @@ main {
         }
     }
 
-    @media screen and (max-width: 480px) {
+    //@media screen and (max-width: 480px) {
 
+    @include v.celu {
         .contacto-contenedor {
 
             height: auto;
@@ -130,10 +131,12 @@ main {
             }
         }
 
+        .mensaje-contacto{
         .mensaje_1 {
             font-size: 1.2rem;
             margin-left: 4px;
             text-align: center;
+            
         }
 
         .mensaje_2 {
@@ -146,6 +149,16 @@ main {
             font-size: 1rem;
             margin-left: 4px;
             text-align: center;
+
+        }
+    }
+    }
+
+    @include v.tab {
+        .mensaje-contacto {
+            .mensaje_3 {
+                text-align: center;
+            }
         }
     }
 }
