--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -58,7 +58,9 @@ main {
         }
     }
 
-    @media screen and (max-width: 480px) {
+
+
+    @include v.celu {
 
         .features-contenedor {
             grid-template-columns: 1fr;
@@ -119,4 +121,77 @@ main {
             }
         }
     }
+
+
+
+
+
+@include v.tab{
+
+.features-contenedor {
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(8, auto);
+            place-items: center;
+            row-gap: 5px;
+            padding: 20px;
+
+            h4 {
+                font-size: 1.2rem;
+                font-weight: bold;
+            }
+
+            font-size: 1rem;
+
+            .matriz-imagen {
+                grid-column: 1/2;
+                grid-row: 1/2;
+                width: 90%;
+            }
+
+            .caja.matriz {
+                grid-column: 1/2;
+                grid-row: 2/3;
+            }
+
+            .filtro-imagen {
+                grid-column: 1/2;
+                grid-row: 3/4;
+                width: 90%;
+            }
+
+            .caja.filtro {
+                grid-column: 1/2;
+                grid-row: 4/5;
+            }
+
+            .envolvente-imagen {
+                grid-column: 1/2;
+                grid-row: 5/6;
+                width: 90%;
+            }
+
+            .caja.envolvente {
+                grid-column: 1/2;
+                grid-row: 6/7;
+            }
+
+            .osciladores-imagen {
+                grid-column: 1/2;
+                grid-row: 7/8;
+                width: 90%;
+            }
+
+            .caja.osciladores {
+                grid-column: 1/2;
+                grid-row: 8/9;
+            }
+        }
+
+
+
+
+}
+
+
+
 }
