--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -3,8 +3,6 @@
 .main-principal {
     background-color: v.$background-color-pri;
 
-
-
     .imagen-minifreak {
         @include v.flx-bx(row, 5px 0 0 0, 0px, center);
 
@@ -63,26 +61,19 @@
 }
 
 .suscripcion {
-
     //position: sticky;
     // bottom: 30px;
     //background-color: v.$background-color-pri;
-
 
     position: fixed;
     bottom: 15px;
     right: 10px;
     width: 50px;
 
-
     animation: balanceo 2s infinite ease;
-
-
-
-
 }
 
-@media screen and (max-width: 480px) {
+@include v.celu {
 
     .main-principal {
         .imagen-minifreak {
@@ -92,12 +83,8 @@
         }
 
         .main-section {
-
             margin-left: 5px;
             width: 95%;
-
-
-
 
             h3 {
                 font-size: 1.1rem;
@@ -118,6 +105,15 @@
 }
 
 @include v.tab {
+
+    .main-principal {
+        .imagen-minifreak {
+            .main-imagen {
+                width: 95%;
+            }
+        }
+    }
+
     .suscripcion {
         width: 6%;
         bottom: 70px;
