--- a/style/style.css
+++ b/style/style.css
@@ -55,7 +55,7 @@ main .titulo-seccion :hover {
     transform: translateX(0);
   }
 }
-@media screen and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 430px) {
   main .titulo-seccion {
     margin-top: 70px;
   }
@@ -64,6 +64,13 @@ main .titulo-seccion :hover {
     font-weight: bolder;
   }
 }
+@media (min-width: 431px) and (max-width: 968px) {
+  main .titulo-seccion > h1 {
+    font-size: 2rem;
+    font-weight: bolder;
+  }
+}
+
 main .artistas {
   display: flex;
   flex-direction: column;
@@ -87,8 +94,7 @@ main .artistas .redmeans {
 main .artistas .xliks {
   background-color: #ff8000;
 }
-
-@media screen and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 430px) {
   main .artistas {
     padding: 5px 30px 60px 30px;
   }
@@ -96,6 +102,16 @@ main .artistas .xliks {
     flex-direction: column;
   }
 }
+@media (min-width: 431px) and (max-width: 968px) {
+  main .artistas .artiatas__item {
+    flex-direction: column;
+  }
+  main .artistas .xliks {
+    display: flex;
+    align-items: center;
+  }
+}
+
 main {
   background-color: #ececec;
 }
@@ -177,7 +193,7 @@ main .mensaje-contacto .mensaje_2 {
 main .mensaje-contacto .mensaje_3 {
   color: #FFA500;
 }
-@media screen and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 430px) {
   main .contacto-contenedor {
     height: auto;
     grid-template-columns: 1fr;
@@ -192,19 +208,24 @@ main .mensaje-contacto .mensaje_3 {
   main .contacto-contenedor .contacto-opinion {
     grid-area: opinion;
   }
-  main .mensaje_1 {
+  main .mensaje-contacto .mensaje_1 {
     font-size: 1.2rem;
     margin-left: 4px;
     text-align: center;
   }
-  main .mensaje_2 {
+  main .mensaje-contacto .mensaje_2 {
     font-size: 1.2rem;
     margin-left: 4px;
     text-align: center;
   }
-  main .mensaje_3 {
+  main .mensaje-contacto .mensaje_3 {
     font-size: 1rem;
     margin-left: 4px;
+    text-align: center;
+  }
+}
+@media (min-width: 431px) and (max-width: 968px) {
+  main .mensaje-contacto .mensaje_3 {
     text-align: center;
   }
 }
@@ -256,7 +277,59 @@ main .features-contenedor .osciladores-imagen {
   grid-row: 4/5;
   width: 90%;
 }
-@media screen and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 430px) {
+  main .features-contenedor {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, auto);
+    place-items: center;
+    row-gap: 5px;
+    padding: 20px;
+  }
+  main .features-contenedor h4 {
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+  main .features-contenedor {
+    font-size: 1rem;
+  }
+  main .features-contenedor .matriz-imagen {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    width: 90%;
+  }
+  main .features-contenedor .caja.matriz {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  main .features-contenedor .filtro-imagen {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    width: 90%;
+  }
+  main .features-contenedor .caja.filtro {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+  main .features-contenedor .envolvente-imagen {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    width: 90%;
+  }
+  main .features-contenedor .caja.envolvente {
+    grid-column: 1/2;
+    grid-row: 6/7;
+  }
+  main .features-contenedor .osciladores-imagen {
+    grid-column: 1/2;
+    grid-row: 7/8;
+    width: 90%;
+  }
+  main .features-contenedor .caja.osciladores {
+    grid-column: 1/2;
+    grid-row: 8/9;
+  }
+}
+@media (min-width: 431px) and (max-width: 968px) {
   main .features-contenedor {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(8, auto);
@@ -351,7 +424,7 @@ main .features-contenedor .osciladores-imagen {
     padding: 5px 1px 1px 1px;
   }
   .pie-de-pagina h2 {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
   }
   .pie-de-pagina h3 {
     font-size: 0.5rem;
@@ -410,7 +483,7 @@ main .nuevos-sintes .sinte-item p {
   text-align: justify;
 }
 
-@media screen and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 430px) {
   main .nuevos-sintes {
     display: flex;
     flex-direction: column;
@@ -474,7 +547,7 @@ main .nuevos-sintes .sinte-item p {
   animation: balanceo 2s infinite ease;
 }
 
-@media screen and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 430px) {
   .main-principal .imagen-minifreak .main-imagen {
     width: 95%;
   }
@@ -496,6 +569,9 @@ main .nuevos-sintes .sinte-item p {
   }
 }
 @media (min-width: 431px) and (max-width: 968px) {
+  .main-principal .imagen-minifreak .main-imagen {
+    width: 95%;
+  }
   .suscripcion {
     width: 6%;
     bottom: 70px;
