--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -126,14 +126,17 @@ main {
 
 
 
-@include v.tab{
+    @include v.tab {
 
-.features-contenedor {
-            grid-template-columns: 1fr;
+        .features-contenedor {
+            grid-template-columns: repeat(2, auto);
             grid-template-rows: repeat(8, auto);
             place-items: center;
-            row-gap: 5px;
-            padding: 20px;
+            //row-gap: 5px;
+            //padding: 20px;
+            column-gap: 30px;
+            align-items: start;
+            
 
             h4 {
                 font-size: 1.2rem;
@@ -154,43 +157,43 @@ main {
             }
 
             .filtro-imagen {
+                grid-column: 2/3;
+                grid-row: 1/2;
+                width: 90%;
+            }
+
+            .caja.filtro {
+                grid-column: 2/3;
+                grid-row: 2/3;
+            }
+
+            .envolvente-imagen {
                 grid-column: 1/2;
                 grid-row: 3/4;
                 width: 90%;
             }
 
-            .caja.filtro {
+            .caja.envolvente {
                 grid-column: 1/2;
                 grid-row: 4/5;
             }
 
-            .envolvente-imagen {
-                grid-column: 1/2;
-                grid-row: 5/6;
-                width: 90%;
-            }
-
-            .caja.envolvente {
-                grid-column: 1/2;
-                grid-row: 6/7;
-            }
-
             .osciladores-imagen {
-                grid-column: 1/2;
-                grid-row: 7/8;
-                width: 90%;
+                grid-column: 2/3;
+                grid-row: 3/4;
+                width: 100%;
             }
 
             .caja.osciladores {
-                grid-column: 1/2;
-                grid-row: 8/9;
+                grid-column: 2/3;
+                grid-row: 4/5;
             }
         }
 
 
 
 
-}
+    }
 
 
 
