--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,6 +11,7 @@ $background-color-qui: #e07000;
 $background-color-sep: #c96400;
 $background-color-set: #ad5701;
 $background-color-oct: #8B4500;
+$background-color-nov: #ffa60063;
 
 
 $fuente-color-pri: black;
@@ -18,6 +19,8 @@ $fuente-color-sec: #8B4500;
 $fuente-color-ter: #Cc5500;
 $fuente-color-cua: #FFA500;
 $borde-color-pri: #f5f5f5;
+
+
 
 * {
     font-family: $fuente-pri;
