--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -107,12 +107,109 @@ main {
         }
     }
 
-    .donde {
-        @include v.flx-bx(column, 5px, 5px, center);
+    // .donde {
+    //     @include v.flx-bx(column, 5px, 5px, center);
+    //     align-items: center;
+    // }
+
+    .slider {
+        width: 90vw;
+        height: auto;
+        margin: auto; //margen centrado en pantalla
+        overflow: hidden;
+        gap: 60px;
+
+    }
+
+    .slider .slider-track {
+        display: flex;
+        animation: scroll 40s linear infinite;
+        -webkit-animation: scroll 40s linear infinite;
+        width: calc(200px * 22);
         align-items: center;
     }
 
-    //@media screen and (max-width: 480px) {
+    .slider .slide {
+        width: 200px;
+    }
+
+    .slider .slide .img {
+        width: 100%;
+        height: 90px;
+    }
+
+    .slider-track {
+        gap: 40px;
+
+        img {
+            //height: 90px;
+            width: 200px;
+        }
+    }
+
+    @keyframes scroll {
+        0% {
+            -webkit-transform: translateX(0);
+            transform: translateX(0);
+        }
+
+        100% {
+            -webkit-transform: translateX(calc(-200px * 11));
+            transform: translateX(calc(-200px * 11));
+        }
+    }
+
+
+    //--------------------------------------MARQUESINA
+    //.logo-contenedor {
+    // @include v.flx-bx(column, 20px 0, 0, center);
+    // //width: 100%;
+    // overflow: hidden;
+    // align-items: center;
+    // animation: scroll 12s linear infinite;
+    // transition: 0.3s ease-in-out;
+    // height: 90px;
+    // width: auto;
+
+    // .logo-item {
+
+    //     display: flex;
+    //     gap: 80px;
+    //     animation: scroll 12s linear infinite;
+
+    //     height: 90px;
+    //     width: auto;
+    //     transition: 0.3s ease-in-out;
+
+    //     img {
+    //         height: 90px;
+    //     }
+
+    // }
+    //}
+
+
+
+    // @keyframes scroll {
+    //     from {
+    //         transform: translateX(0);
+    //     }
+
+    //     to {
+    //         transform: translateX(-100%);
+    //     }
+    // }
+
+
+
+
+
+
+
+
+
+
+
 
     @include v.celu {
         .contacto-contenedor {
@@ -157,7 +254,7 @@ main {
             }
         }
 
-        
+
 
     }
 
