--- a/style/style.css
+++ b/style/style.css
@@ -193,13 +193,42 @@ main .mensaje-contacto .mensaje_2 {
 main .mensaje-contacto .mensaje_3 {
   color: #FFA500;
 }
-main .donde {
+main .slider {
+  width: 90vw;
+  height: auto;
+  margin: auto;
+  overflow: hidden;
+  gap: 60px;
+}
+main .slider .slider-track {
   display: flex;
-  flex-direction: column;
-  padding: 5px;
-  gap: 5px;
-  justify-content: center;
+  animation: scroll 40s linear infinite;
+  -webkit-animation: scroll 40s linear infinite;
+  width: 4400px;
   align-items: center;
+}
+main .slider .slide {
+  width: 200px;
+}
+main .slider .slide .img {
+  width: 100%;
+  height: 90px;
+}
+main .slider-track {
+  gap: 40px;
+}
+main .slider-track img {
+  width: 200px;
+}
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-2200px);
+    transform: translateX(-2200px);
+  }
 }
 @media (min-width: 320px) and (max-width: 430px) {
   main .contacto-contenedor {
