Se corrigen detalles finales en contactos

--- a/sass/_news.scss
+++ b/sass/_news.scss
@@ -5,9 +5,6 @@ main {
     .nuevos-sintes {
 
         @include v.flx-bx(row, 30px, 10px, flex-start);
-        //display: flex;
-        //padding: 30px;
-        //gap: 10px;
 
         .sinte-item {
 
@@ -15,10 +12,6 @@ main {
             background-color: v.$background-color-pri;
             border-radius: 10px;
             overflow: hidden;
-            //display: flex;
-            //flex-direction: column;
-            //gap: 10px;
-            //padding: 10px;
 
             .sinte__imagen {
                 max-width: 100%;
@@ -27,7 +20,7 @@ main {
             .sinte__nombre {
 
                 color: v.$fuente-color-pri;
-                text-shadow: 0 0 5px v.$fuente-color-cua; //v.$fuente-color-ter;
+                text-shadow: 0 0 5px v.$fuente-color-cua;
             }
 
             p {
@@ -37,35 +30,18 @@ main {
     }
 
 
-
-
     @include v.celu {
 
-        // main {
+
         .nuevos-sintes {
             @include v.flx-bx(column, 10px, 5px, flex-start);
-            //flex-direction: column;
-            //padding: 10px;
-            //gap: 5px;
         }
-
-        // }
     }
 
     @include v.tab {
 
         .nuevos-sintes {
             @include v.flx-bx(row, 10px, 5px, flex-start);
-
-
-            
-
-            
-            
         }
-
-
     }
-
-
 }
